# Monitoring_GasFlowControl

./: .gitignore  .gitmodules  CMakeLists.txt  Gas_Flow_Contol-x86_64.AppImage  README.md  TestDeploy.rar  imgui.ini  main.cpp  main_dx11.cpp
.github/workflows/: add-badges.yml  cmake-multi-platform.yml  cmake-single-platform-win.yml  cmake-single-platform.yml
Deploy/: imgui.ini  run.sh
Deploy/AppImage/: run.sh
Deploy/GasFlowControll_Installer/: GasFlowControl_Installer.sln
Deploy/GasFlowControll_Installer/SetupProject1/: GasFlowControl_installer.wixproj  Include1.wxi  Product.wxs
Deploy/GasFlowControll_Installer/SetupProject1/Directories/: directories.wxs
Deploy/GasFlowControll_Installer/SetupProject1/Features/: Feature_files.wxs
Deploy/GasFlowControll_Installer/SetupProject1/Files/: dlls.wxs  main_file.wxs  resources.wxs
Deploy/GasFlowControll_Installer/SetupProject1/UI/: UI.wxs
Deploy/Source/: imgui.ini
Tests/Pid_regulator_test/: Connection_unittest.py  SensorOutTest.py
libs/implot/: implot.cpp  implot.h  implot_demo.cpp
libs/include/: ImGuiNotify.hpp  csvfile.h
modules/: AppDocks.cpp  AppDocks.h  ControlPanel.cpp  ControlPanel.h  ControllPanel.cpp  ControllPanel.h  PID.cpp  PID.h  PlotWindow.cpp  PlotWindow.h  ServerModule.cpp  ServerModule.h  SocketModule.cpp  SocketModule.h  mainMenu.cpp  mainMenu.h  pid.h
resources/: ExoFontEmbedded_utf8.cpp  GasFlowControll.desktop  LICENSE.rtf  icon_256.c
resources/imgui_configuration/: imgui.ini
resources/include/: IconsFontAwesome6.h  fa-regular-400.h  fa-solid-900.h  icon_256_gnome.c
